INTARCH-2935: Fix 'overlapping' poster images

--- a/app/javascript/stylesheets/overwrites/_video-js.scss
+++ b/app/javascript/stylesheets/overwrites/_video-js.scss
@@ -5,3 +5,7 @@
 .video-js .vjs-remaining-time {
   display: none;
 }
+
+.vjs-poster img {
+  object-fit: cover;
+}
